--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ document.addEventListener("DOMContentLoaded", function () {
 	    setsContainer.innerHTML = "";
 
 	    if (!sets || Object.keys(sets).length === 0) {
-	        setsContainer.insertAdjacentHTML('beforeend', "<p>세트를 찾을 수 없습니다.</p>");
+	        //setsContainer.insertAdjacentHTML('beforeend', "<p>세트를 찾을 수 없습니다.</p>");
 	        return;
 	    }
 
