--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@ span.info-channel.all-server{
     padding: 50% 0px;
 }
 
-#erirTime{
+#erinTime{
     position: absolute;
     left: 0px;
     transform: translate(0%, -50%);
