서버 순서 변경2
서버 순서 변경2

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ document.addEventListener("DOMContentLoaded", function () {
 	let pouchOrder = [];
 		
 
-	const server_ch = { "울프": 15, "류트": 42, "하프": 24, "만돌린": 15 };
+	const server_ch = { "류트": 42, "하프": 24, "울프": 15, "만돌린": 15 };
 	
 	//이후 svg 제작 이미지로 수정 예정
 	const jumoney_url = "https://api.na.mabibase.com/assets/item/icon/";
