--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ document.addEventListener("DOMContentLoaded", function () {
 			//캡쳐용 마을 이름 숨기기
 			pouchOrder[count] = item_nm;
 			table += `<div class="item"><h3 class="location_nm hidden">${location_nm}</h3>`;
-			table += `<button class="btnSearch" data-info1="${color.color_01}" data-info2="${color.color_02}"></button>`;
+			table += `<button class="btnNewTab" data-info1="${color.color_01}" data-info2="${color.color_02}"></button>`;
 			table += `<img src="${url}" alt="${item_nm}" class="api-img"><img src="${jumoney_url}${jumoney_key[index]}?colors=${getUrlColor(color)}" class="mabibase-img" onerror="this.src='./cute.png'"><label class="item_nm">${item_nm}</label>${setColorLabel(color)}</div>`;
 			count++;
 			//if (count % max_cnt === 0) table += "</tr>";
@@ -573,7 +573,7 @@ document.addEventListener("DOMContentLoaded", function () {
    	                if (isMultiServer) {
    	                    let multiChannelInfo = `<p><label class="info-jumoney-name">${itemName}</label>`;
    	                    Object.entries(channels).forEach(([server, chList]) => {
-   	                        multiChannelInfo += `<span class="info-channel all-server">${server}: ${chList.join(", ")}</span>`;
+   	                        multiChannelInfo += `<span class="info-channel all-server"><label class="server-mark ${server}"></label> ${chList.join(", ")}</span>`;
    	                    });
    	                    multiChannelInfo += "</p>";
    	                    channelInfoDiv.innerHTML += multiChannelInfo;
@@ -619,7 +619,7 @@ document.addEventListener("DOMContentLoaded", function () {
    	                if (isMultiServer) {
    	                    let multiChannelInfo = `<p><label class="info-jumoney-name">${itemName}</label>`;
    	                    Object.entries(channels).forEach(([server, chList]) => {
-   	                        multiChannelInfo += `<span class="info-channel all-server">${server}: ${chList.join(", ")}</span>`;
+   	                        multiChannelInfo += `<span class="info-channel all-server"><label class="server-mark ${server}"></label> ${chList.join(", ")}</span>`;
    	                    });
    	                    multiChannelInfo += "</p>";
    	                    channelInfoDiv.innerHTML += multiChannelInfo;
@@ -928,6 +928,25 @@ span.info-channel.all-server{
     position: absolute;
     left: 0px;
     transform: translate(0%, -50%);
+}
+.server-mark{
+	width: 20px;
+    height: 17px;
+    background-size: 20px 17px;
+    background-repeat: no-repeat;
+    vertical-align: bottom;
+}
+.server-mark.울프{
+	background-image: url("./image/wf.png");
+}
+.server-mark.류트{
+	background-image: url("./image/lt.png");
+}
+.server-mark.하프{
+	background-image: url("./image/hp.png");
+}
+.server-mark.만돌린{
+	background-image: url("./image/md.png");
 }
 </style>
 
