--- a/index.html
+++ b/index.html
@@ -949,6 +949,10 @@ span.info-channel.all-server{
 .server-mark.만돌린{
 	background-image: url("./image/md.png");
 }
+.channel-info{
+	padding-bottom: 7px;
+}
+
 </style>
 
 </head>
