--- a/index.html
+++ b/index.html
@@ -6,23 +6,30 @@
 <script src="./js/erinTime.js?v2"></script>
 <script type="text/javascript" src="./js/jumoney.js"></script>
 <link rel="stylesheet" href="./css/font.css">
-<link rel="stylesheet" href="./css/default.css">
+<link rel="stylesheet" href="./css/default.css?v1">
 
 </head>
 <body>
 	<div id="main">
 		<div id="srchForm">
+			<div id="time-area">
+				<sapn>
+					오늘 날짜: <span id="today"></span>
+				</sapn>
+				<span style="visibility: hidden;">
+					호출 시간: <span id="lastCallTime"></span>
+				</span>
+				<span id="resetTime">
+					다음 리셋: <span id="time"></span>
+				</span>
+				<sapn id="erinTime">
+				</sapn>
+			</div>
 			<div id="top-info">
 				<input type="text" id="apiKey"><button id="setApiKey">적용</button>
 				<button onclick="window.open('https://openapi.nexon.com/my-application/')">API KEY 생성</button>
-			</div>
-			<div id="wid">
-				<sapn id="erinTime">
-				</sapn>
-				<span id="resetTime">
-					리셋 시간: <span type="text" id="time"></span>
-				</span>
-			
+			</div>			
+			<div id="wid">				
 				<select id="npc_nm" class="">
 					<option value="all">전체</option>
 					<option value="상인 네루">티르코네일</option>
