--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			<ul>
 				<li>신규 기능이 추가되었습니다. (2024-10-21)</li>
 				<li>채널링 또는 전체 채널링시 세트 여부가 표시됩니다.</li>
-				<li>실크셋 표기가 제대로 안됨을 발견하여 수정하였습니다....'-` 실크셋+ 는 꽃바구니까지 있는거에요 (수정완 15:30)</li>
+				<li>실크셋 표기가 제대로 안됨을 발견하여 수정하였습니다....'-` 실크셋+ 는 꽃바구니까지 있는거에요<br>(수정완 15:30)</li>
 				<li>각 세트별 구분하기 쉽게 배경색을 따로 배정할까 하는데 고민 중이에요...</li>
 			</ul>
 			
