--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 				<li>주머니 이름 클릭시 이미지 위에 지역 이름이 표시됩니다!</li>
 				<li>채널링, 특히 전 서버 채널링은 어쩔 수 없이 api 호출 횟수가 많습니다..ㅠㅠ</li>
 				<li>서비스 api키 발급에서 사이트 검증을 안하는 것 같으니 참고하세요!</li>
+				<li>채널링은 누르고 기다리셔야 해요. 귀찮아서 로딩표시를 안 만들었습니다!!</li>
 			</ul>
 			
 			<ul>
