--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>주머니 순회</title>
 <script src="./js/erinTime.js?v2"></script>
-<script type="text/javascript" src="./js/jumoney.js?v11"></script>
+<script type="text/javascript" src="./js/jumoney.js?v12"></script>
 <link rel="stylesheet" href="./css/font.css">
 <link rel="stylesheet" href="./css/default.css?v9">
 
@@ -85,6 +85,7 @@
 				<li>채널링 또는 전체 채널링시 세트 여부가 표시됩니다.</li>
 				<li>실크셋 표기가 제대로 안됨을 발견하여 수정하였습니다....'-` 실크셋+ 는 꽃바구니까지 있는거에요<br>(수정완 15:30)</li>
 				<li>각 세트별 구분하기 쉽게 배경색을 따로 배정할까 하는데 고민 중이에요...</li>
+				<li>업데이트 한다는게 실수로 롤백해서 다시돌리다..(16:57).</li>
 			</ul>
 			
 			<ul>
