--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>주머니 순회</title>
-<script src="./js/erinTime.js?v2"></script>
-<script type="text/javascript" src="./js/jumoney.js?v12"></script>
+<script src="./js/erinTime.min.js?v2"></script>
+<script type="text/javascript" src="./js/jumoney.min.js?v12"></script>
 <link rel="stylesheet" href="./css/font.css">
 <link rel="stylesheet" href="./css/default.css?v9">
 
