--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 			<ul>
 				<li>기능 추가 예정</li>
 				<li>안감 이미지 등 자체 이미지로 변경 예정입니다.</li>
+				<li>아무래도 타 사이트에서 호출해서 가져오는 건, 느리거나 못 가져올때가 있어서'-`</li>
 				<li>만들어진 이미지를 픽셀이 깨지지 않고 축소 확대 기능 추가 예정</li>
 				<li>방직셋 등 세트가 된다면 세트 이미지 표시 예정</li>
 				<li>캡쳐하기 쉽도록 가로 크기의 주머니 정보와 채널링 정보 모달 제작 예정</li>
