--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 <title>주머니 순회</title>
 <script src="./js/erinTime.min.js?v2"></script>
 <script type="text/javascript" src="./js/jumoney.min.js?v12"></script>
