--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <meta charset="UTF-8">
 <link rel="icon" href="./image/favicon.ico" type="image/x-icon">
 <title>주머니 순회</title>
-<script src="./js/erinTime.min.js?v2"></script>
-<script type="text/javascript" src="./js/jumoney.min.js?v12"></script>
+<script type="text/javascript" src="./js/apiCode.js"></script>
+<script src="./js/erinTime.js?v2"></script>
+<script type="text/javascript" src="./js/jumoney.min.js?v11"></script>
 <link rel="stylesheet" href="./css/font.css">
 <link rel="stylesheet" href="./css/default.css?v9">
 
@@ -78,28 +79,37 @@
 				<li>주머니 이름 클릭시 이미지 위에 지역 이름이 표시됩니다!</li>
 				<li>채널링, 특히 전 서버 채널링은 어쩔 수 없이 api 호출 횟수가 많습니다..ㅠㅠ</li>
 				<li>서비스 api키 발급에서 사이트 검증을 안하는 것 같으니 참고하세요!</li>
-				<li>채널링은 누르고 기다리셔야 해요. 귀찮아서 로딩표시를 안 만들었습니다!!</li>
+				<li>채널링은 누르고 기다리셔야 해요. 귀찮아서 로딩표시를 안 만들었습니다!! -> 만들었습니다..</li>
+			</ul>
+			<br/>
+			<ul>				
+				<li>신규 기능이 추가되었습니다. (2024-10-23)</li>
 			</ul>
 			
-			<ul>
-				<li>신규 기능이 추가되었습니다. (2024-10-21)</li>
-				<li>채널링 또는 전체 채널링시 세트 여부가 표시됩니다.</li>
-				<li>실크셋 표기가 제대로 안됨을 발견하여 수정하였습니다....'-` 실크셋+ 는 꽃바구니까지 있는거에요<br>(수정완 15:30)</li>
-				<li>각 세트별 구분하기 쉽게 배경색을 따로 배정할까 하는데 고민 중이에요...</li>
-				<li>업데이트 한다는게 실수로 롤백해서 다시돌리다..(16:57).</li>
+			<ul style="background: #fcf3f3;">				
+				<li><label class="new_nt">new</label>테스트키로 채널링 및 전체 채널링 검색 시 초당 호출 횟수 제한을 피하기 위해 로딩 시간이 생겼습니다.</li>
+				<li>어디까지 로딩했는지 확인 가능합니다.</li>
+				<li>로딩된 데이터는 페이지를 새로고침 하거나, 리셋시간이 되지 않은 경우 캐시에 저장 되어있으니</li>
+				<li>호출 제한 코드가 뜬 후 다시 채널링을 누를 경우 못 받은 데이터만 호출해서 가져옵니다.</li>
 			</ul>
 			
+			<ul style="background: #fcf3f3;">
+				<li><label class="new_nt">new</label>전체 서버 채널링 및 채널링에서 세트 정보 표기를 눌러 해당 주머니 채널만 볼 수 있습니다!</li>
+				<li>어디까지 로딩했는지 확인 가능합니다.</li>
+				<li>로딩된 데이터는 페이지를 새로고침 하거나, 리셋시간이 되지 않은 경우 캐시에 저장 되어있으니</li>
+				<li>호출 제한 코드가 뜬 후 다시 채널링을 누를 경우 못 받은 데이터만 호출해서 가져옵니다.</li>				
+			</ul>
+			<br/>
 			<ul>
 				<li>기능 추가 예정</li>
 				<li>안감 이미지 등 자체 이미지로 변경 예정입니다.</li>
-				<li>아무래도 타 사이트에서 호출해서 가져오는 건, 느리거나 못 가져올때가 있어서'-`</li>
 				<li>만들어진 이미지를 픽셀이 깨지지 않고 축소 확대 기능 추가 예정</li>
 				<li>방직셋 등 세트가 된다면 세트 이미지 표시 예정</li>
 				<li>캡쳐하기 쉽도록 가로 크기의 주머니 정보와 채널링 정보 모달 제작 예정</li>
 			</ul>
 		</div>
 		<div id="tables" style="display:none;"></div>
-		<div id="results" style="margin-top: 20px;padding: 100px 0px;"></div>
+		<div id="results"></div>
 	</div>
 	
 	<div id="capture_modal" class="modal close">
@@ -108,6 +118,18 @@
 	        <p>이것은 모달 창입니다. 모달 창을 닫으려면 아래 버튼을 누르세요.</p>
 	        <button class="close-button">닫기</button>
 	    </div>
+	</div>
+	
+	<!-- 로딩 오버레이 -->
+	<div id="loadingOverlay" class="loading-overlay hidden">
+	  <div class="spinner"></div>
+	  <p>로딩 중<br/>잠시만 기다려주세요.<span id="completeCnt"></span></p>
+	  <p id="curCallState"></p>
+	  <p></p>
+	  <p>중간에 멈출 경우 페이지를 새로고침을 하지 말고<br/>다시 채널링 버튼을 누르면 못 받은 데이터만 호출 합니다.</p>
+	  <p></p>
+	  <p style="display: inline;">"에러 발생시에만" 로딩 화면이 꺼지지 않는다면<br/><span id="loadingClose">로딩 화면 끄기</span>를 눌러주세요</p>
+	 
 	</div>
 </body>
 </html>
