--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="icon" href="./image/favicon.ico" type="image/x-icon">
 <title>주머니 순회</title>
 <script type="text/javascript" src="./js/apiCode.js"></script>
-<script src="./js/erinTime.js?v2"></script>
+<script src="./js/erinTime.min.js?v2"></script>
 <script type="text/javascript" src="./js/jumoney.min.js?v12"></script>
 <link rel="stylesheet" href="./css/font.css">
 <link rel="stylesheet" href="./css/default.css?v10">
