--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 				<li>만들어진 이미지를 픽셀이 깨지지 않고 축소 확대 기능 추가 예정</li>
 				<li>방직셋 등 세트가 된다면 세트 이미지 표시 예정</li>
 				<li>캡쳐하기 쉽도록 가로 크기의 주머니 정보와 채널링 정보 모달 제작 예정</li>
+				<li>작물,방직 / 가죽,옷감,실크,바구니 C팟 컬러 각각 표시</li>
 				<li>색 필터링 검색 기능</li>
 				<li>여기 중에 뭐가 먼저 나올지는 저도 몰라요~</li>
 			</ul>
