--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
 			<ul>
 				<li>얼레벌레 공지입니다. 보기 좋게 만드는 건 기능구현 후에..</li>
 			</ul>
+
+			<ul style="background: #fcf3f3;">				
+				<li>***업데이트 이후 주머니에 컬러코드가 실종 됐습니다***</li>
+				<li>임시방편으로 이미지만 출력 되며, 채널링 기능은 정상적으로 작동하지 않습니다.</li>
+			</ul>
 			
 			<ul>				
 				<li>신규 기능이 추가되었습니다. (2024-10-23)</li>
