--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				<li>얼레벌레 공지입니다. 보기 좋게 만드는 건 기능구현 후에..</li>
 			</ul>
 
-			<ul style="background: #fcf3f3;">				
+			<ul style="    background: #fff49d;font-size: 14pt;">				
 				<li>***업데이트 이후 주머니에 컬러코드가 실종 됐습니다***</li>
 				<li>임시방편으로 이미지만 출력 되며, 채널링 기능은 정상적으로 작동하지 않습니다.</li>
 			</ul>
