--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 					<button id="prev">이전 채널</button>
 				    <button id="next">다음 채널</button>
 			    </div>
-			    <button id="checkSet" style="margin-left: 2px;">채널링</button>
-			    <button id="checkAllServers">전 서버 채널링</button>
+			    <button id="checkSet" style="margin-left: 2px;display:none" disabled>채널링</button>
+			    <button id="checkAllServers" style="display:none;" disabled>전 서버 채널링</button>
 				
 			</div>
 		</div>
