--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <title>주머니 순회</title>
 <script type="text/javascript" src="./js/apiCode.js"></script>
 <script src="./js/erinTime.min.js?v2"></script>
-<script type="text/javascript" src="./js/jumoney.min.js?v20241024-1304"></script>
+<script type="text/javascript" src="./js/jumoney.js?v20241024-1517"></script>
 <link rel="stylesheet" href="./css/font.css">
-<link rel="stylesheet" href="./css/default.css?v20241024-0149">
+<link rel="stylesheet" href="./css/default.css?v20241024-0145">
 
 </head>
 <body>
@@ -72,8 +72,8 @@
 					<button id="prev">이전 채널</button>
 				    <button id="next">다음 채널</button>
 			    </div>
-			    <button id="checkSet" style="margin-left: 2px;display:none" disabled>채널링</button>
-			    <button id="checkAllServers" style="display:none;" disabled>전 서버 채널링</button>
+			    <button id="checkSet" style="margin-left: 2px;">채널링</button>
+			    <button id="checkAllServers">전 서버 채널링</button>
 				
 			</div>
 		</div>
@@ -81,10 +81,11 @@
 			<ul>
 				<li>얼레벌레 공지입니다. 보기 좋게 만드는 건 기능구현 후에..</li>
 			</ul>
-
-			<ul style="    background: #fff49d;font-size: 14pt;">				
+			
+			<ul style=" background: #fff49d;font-size: 14pt;">				
 				<li>***업데이트 이후 주머니에 컬러코드가 실종 됐습니다***</li>
-				<li>임시방편으로 이미지만 출력 되며, 채널링 기능은 정상적으로 작동하지 않습니다.</li>
+				<li>임시방편으로 이미지만 출력 됩니다.</li>
+				<li><label class="new_nt">new</label>24-10-24 15:15 채널링 기능은 복구 되었습니다...</li>
 			</ul>
 			
 			<ul>				
