--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>주머니 순회</title>
 <script type="text/javascript" src="./js/apiCode.js"></script>
 <script src="./js/erinTime.min.js?v2"></script>
-<script type="text/javascript" src="./js/jumoney.min.js?v20241024-1517"></script>
+<script type="text/javascript" src="./js/jumoney.min.js?v20241024-1542"></script>
 <link rel="stylesheet" href="./css/font.css">
 <link rel="stylesheet" href="./css/default.css?v20241024-0145">
 
@@ -86,6 +86,7 @@
 				<li>***업데이트 이후 주머니에 컬러코드가 실종 됐습니다***</li>
 				<li>임시방편으로 이미지만 출력 됩니다.</li>
 				<li><label class="new_nt">new</label>24-10-24 15:15 채널링 기능은 복구 되었습니다...</li>
+				<li><label class="new_nt">new</label>채널링 클릭시 뒤에 요상한 문구 대신 대표 이미지 하나로 수정했습니다.</li>
 			</ul>
 			
 			<ul>				
