--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>주머니 순회</title>
 <script type="text/javascript" src="./js/apiCode.js"></script>
 <script src="./js/erinTime.min.js?v2"></script>
-<script type="text/javascript" src="./js/jumoney.min.js?v20241024-1542"></script>
+<script type="text/javascript" src="./js/jumoney.min.js?v20241024-2302"></script>
 <link rel="stylesheet" href="./css/font.css">
 <link rel="stylesheet" href="./css/default.css?v20241024-0145">
 
@@ -87,7 +87,7 @@
 				<li>임시방편으로 이미지만 출력 됩니다.</li>
 				<li><label class="new_nt">new</label>24-10-24 15:15 채널링 기능은 복구 되었습니다...</li>
 				<li><label class="new_nt">new</label>채널링 클릭시 뒤에 요상한 문구 대신 대표 이미지 하나로 수정했습니다.</li>
-				<li><label class="new_nt">new</label>방직과 가죽이 같은 팔레트임에도 채널링에 안잡히던 증상을 수정했습니다.</li>
+				<li><label class="new_nt">new</label>방직과 가죽이 같은 팔레트임에도 채널링에 안잡히던 증상을 수정했습니다. - 10-24 23:02</li>
 			</ul>
 			
 			<ul>				
