--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 <title>주머니 순회</title>
 <script type="text/javascript" src="./js/apiCode.js"></script>
 <script src="./js/erinTime.min.js?v2"></script>
-<script type="text/javascript" src="./js/jumoney.min.js?v20241024-2302"></script>
+<script type="text/javascript" src="./js/jumoney.min.js?v20241024-0145"></script>
 <link rel="stylesheet" href="./css/font.css">
 <link rel="stylesheet" href="./css/default.css?v20241024-0145">
+<link rel="stylesheet" href="./css/icon/iconStyle.css?v20241024-0145">
 
 </head>
 <body>
@@ -80,14 +81,6 @@
 		<div id="loading">
 			<ul>
 				<li>얼레벌레 공지입니다. 보기 좋게 만드는 건 기능구현 후에..</li>
-			</ul>
-			
-			<ul style=" background: #fff49d;font-size: 14pt;">				
-				<li>***업데이트 이후 주머니에 컬러코드가 실종 됐습니다***</li>
-				<li>임시방편으로 이미지만 출력 됩니다.</li>
-				<li><label class="new_nt">new</label>24-10-24 15:15 채널링 기능은 복구 되었습니다...</li>
-				<li><label class="new_nt">new</label>채널링 클릭시 뒤에 요상한 문구 대신 대표 이미지 하나로 수정했습니다.</li>
-				<li><label class="new_nt">new</label>방직과 가죽이 같은 팔레트임에도 채널링에 안잡히던 증상을 수정했습니다. - 10-24 23:02</li>
 			</ul>
 			
 			<ul>				
