--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="./js/apiCode.js"></script>
 <script src="./js/erinTime.min.js?v2"></script>
 <script src="./js/colorCode.min.js?v2"></script>
-<script type="text/javascript" src="./js/jumoney.min.js?v20251025"></script>
+<script type="text/javascript" src="./js/jumoney.min.js?v20251025-0426"></script>
 <link rel="stylesheet" href="./css/font.css">
 <link rel="stylesheet" href="./css/default.css?v20241025-0145">
 <link rel="stylesheet" href="./css/icon/iconStyle.css?v20251025-0145">
