지역 토글 버그 수정
채널링 버튼을 누른 후 아이템 이름을 선택했을 때 지역 이름이 토글되지 않던 버그가 수정되었습니다.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="./js/apiCode.js"></script>
 <script src="./js/erinTime.min.js?v2"></script>
 <script src="./js/colorCode.min.js?v2"></script>
-<script type="text/javascript" src="./js/jumoney.min.js?v20251025-0426"></script>
+<script type="text/javascript" src="./js/jumoney.min.js?v20251025-1008"></script>
 <link rel="stylesheet" href="./css/font.css">
 <link rel="stylesheet" href="./css/default.css?v20241025-0145">
 <link rel="stylesheet" href="./css/icon/iconStyle.css?v20251025-0145">
@@ -91,12 +91,25 @@
 			</ul>
 			
 			<ul style="background: #fff8c7;font-size: 11pt;">				
-				<li><label class="new_nt">new</label><a href="https://x.com/jumeonidik3038" target="_blank">@jumeonidik303</a> 님의 도움으로 색 코드를 표시할 수 있게 됐습니다!</li>
+				<li>
+					<label class="new_nt">new</label><a href="https://x.com/jumeonidik3038" target="_blank">@jumeonidik303</a>님과 <a href="https://x.com/inventory_LT" target="_blank">@inventory_LT</a>의 도움으로
+					색 코드를 표시할 수 있게 됐습니다!
+				</li>
 				<li>정확하지 않을 수 있으니 참고용으로 봐주세요</li>
-				<li>컬러 코드중 ? 표시가 있는 색은 분석이 덜 된 코드입니다.</li>
-				<li>이미지 주소값과 기미 후 스티커로 만들어서 나온 컬러코드를 <a href="https://x.com/jumeonidik3038" target="_blank">@jumeonidik303</a> 님께 전달해주세요!</li>
+				<li>색 코드중 ? 표시가 있는 색은 분석이 덜 된 코드입니다.</li>
+				<li>이미지 주소값과 기미 후 스티커로 만들어서 나온 컬러 코드의 경우</li>
+				<li><a href="https://x.com/jumeonidik3038" target="_blank">@jumeonidik303</a>, <a href="https://x.com/inventory_LT" target="_blank">@inventory_LT</a> 여기로 전달해주세요!</li>
 			</ul>
 			
+			<ul style=" background: #fcf3f3;">
+				<li><label class="new_nt">new</label>2024-10-25 10:10</li>								
+				<li>채널링 버튼을 누른 후 아이템 이름을 선택했을 때</li>
+				<li>지역 이름이 토글되지 않던 버그가 수정되었습니다.</li>
+				<li>&nbsp;</li>
+				<li>채널링시 현재 채널 외의 팔레트 이미지 정보도 복사할 수 있습니다.</li>
+				<li>&nbsp;</li>
+				<li>코드 분석 데이터를 제공받아 업데이트 하였습니다</li>
+			</ul>
 			
 			<ul style=" background: #fcf3f3;">				
 				<li>***업데이트 이후 주머니에 컬러코드가 실종 됐습니다***</li>
@@ -106,21 +119,21 @@
 				<li>방직과 가죽이 같은 팔레트임에도 채널링에 안잡히던 증상을 수정했습니다.</li>
 			</ul>
 					
-			<ul style="background: #fcf3f3;">				
+			<ul>				
 				<li>테스트키로 채널링 및 전체 채널링 검색 시 초당 호출 횟수 제한을 피하기 위해 로딩 시간이 생겼습니다.</li>
 				<li>어디까지 로딩했는지 확인 가능합니다.</li>
 				<li>로딩된 데이터는 페이지를 새로고침 하거나, 리셋시간이 되지 않은 경우 캐시에 저장 되어있으니</li>
 				<li>호출 제한 코드가 뜬 후 다시 채널링을 누를 경우 못 받은 데이터만 호출해서 가져옵니다.</li>
 			</ul>
 			
-			<ul style="background: #fcf3f3;">
+			<ul>
 				<li>전체 서버 채널링 및 채널링에서 세트 정보 표기를 눌러 해당 주머니 채널만 볼 수 있습니다!</li>
 				<li>어디까지 로딩했는지 확인 가능합니다.</li>
 				<li>로딩된 데이터는 페이지를 새로고침 하거나, 리셋시간이 되지 않은 경우 캐시에 저장 되어있으니</li>
 				<li>호출 제한 코드가 뜬 후 다시 채널링을 누를 경우 못 받은 데이터만 호출해서 가져옵니다.</li>				
 			</ul>
 			
-			<ul style="background: #fcf3f3;">
+			<ul>
 				<li>이전 마을, 다음 마을 버튼이 추가되었습니다.</li>
 				<li>전체 지역의 경우 선택 박스에서만 선택 가능합니다.</li>
 				<li>이전 마을, 다음 마을 버튼에서는 전체를 건너띄고 넘어가서 선택할 수 없습니다.</li>
