--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
 				<li>채널링시 현재 채널 외의 팔레트 이미지 정보도 복사할 수 있습니다.</li>
 				<li>&nbsp;</li>
 				<li>코드 분석 데이터를 제공받아 업데이트 하였습니다</li>
+				<li>&nbsp;</li>
+				<li>멍청비용으로 잃어버린 전체지역 검색을 되찾았습니다..ㅎㅎ..</li>			
 			</ul>
 			
 			<ul style=" background: #fcf3f3;">				
