--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <script type="text/javascript" src="./js/apiCode.js"></script>
 <script src="./js/erinTime.min.js?v2"></script>
 <script src="./js/colorCode.min.js?v2"></script>
-<script type="text/javascript" src="./js/jumoney.min.js?v20251025-1008"></script>
+<script type="text/javascript" src="./js/jumoney.min.js?v20251026-1706"></script>
 <link rel="stylesheet" href="./css/font.css">
-<link rel="stylesheet" href="./css/default.css?v20241025-0145">
+<link rel="stylesheet" href="./css/default.css?v20251026-1706">
 <link rel="stylesheet" href="./css/icon/iconStyle.css?v20251025-0145">
 <style>
 		#loading a {
@@ -100,9 +100,20 @@
 				<li>이미지 주소값과 기미 후 스티커로 만들어서 나온 컬러 코드의 경우</li>
 				<li><a href="https://x.com/jumeonidik3038" target="_blank">@jumeonidik303</a>, <a href="https://x.com/inventory_LT" target="_blank">@inventory_LT</a> 여기로 전달해주세요!</li>
 			</ul>
+			<label class="new_nt">new</label>
 			
 			<ul style=" background: #fcf3f3;">
-				<li><label class="new_nt">new</label>2024-10-25 10:10</li>								
+				<li><label class="new_nt">new</label>2024-10-65 19:01</li>								
+				<li>팝업 버튼이 추가되었습니다.</li>
+				<li>&nbsp;</li>
+				<li>해당 버튼을 누르면 캡쳐하기 편한 모달창이 열립니다.</li>
+				<li>모달창은 우측 상단 X 버튼이나 모달창 밖의 화면을 눌러 끌 수 있습니다.</li>
+				<li>&nbsp;</li>
+				<li>모달 창을 열기전 캡쳐하고 싶은 세트 혹은 서버를 클릭 후 열어주세요</li>
+			</ul>
+			
+			<ul style=" background: #fcf3f3;">
+				<li>2024-10-25 10:10</li>								
 				<li>채널링 버튼을 누른 후 아이템 이름을 선택했을 때</li>
 				<li>지역 이름이 토글되지 않던 버그가 수정되었습니다.</li>
 				<li>&nbsp;</li>
@@ -112,15 +123,7 @@
 				<li>&nbsp;</li>
 				<li>멍청비용으로 잃어버린 전체지역 검색을 되찾았습니다..ㅎㅎ..</li>			
 			</ul>
-			
-			<ul style=" background: #fcf3f3;">				
-				<li>***업데이트 이후 주머니에 컬러코드가 실종 됐습니다***</li>
-				<li>임시방편으로 이미지만 출력 됩니다.</li>
-				<li>24-10-24 15:15 채널링 기능은 복구 되었습니다...</li>
-				<li>채널링 클릭시 뒤에 요상한 문구 대신 대표 이미지 하나로 수정했습니다.</li>
-				<li>방직과 가죽이 같은 팔레트임에도 채널링에 안잡히던 증상을 수정했습니다.</li>
-			</ul>
-					
+				
 			<ul>				
 				<li>테스트키로 채널링 및 전체 채널링 검색 시 초당 호출 횟수 제한을 피하기 위해 로딩 시간이 생겼습니다.</li>
 				<li>어디까지 로딩했는지 확인 가능합니다.</li>
@@ -172,6 +175,36 @@
 	    </div>
 	</div>
 	
+	<!-- 모달 -->
+	<div id="itemModal" class="modal-overlay" style="display: none;">
+	    <div class="modal-content">
+	        <span id="closeModal" class="close-button">×</span>
+	
+	        <div class="modal-body">
+	            <!-- 왼쪽: 이미지와 색상 정보 -->
+	            <div class="left-layout">	      
+		            <h3 id="modalItemName"></h3>
+	                <div class="image-container">
+	                    <img id="modalApiImage" src="" class="api-img">
+	                    <img id="modalMabibaseImage" src="" class="zoomable-image mabibase-img">
+	                </div>
+	                <div class="color-info" id="modalItemColors"></div> <!-- 색상 정보 -->
+	                <div class="image-copy-container"> <!-- 이미지 복사본 위치 -->
+	                    <img id="modalMabibaseImageCopy" src="" class="zoomable-image-copy">
+	                </div>
+	                <div class="image-list-sample">
+	                </div>
+	            </div>
+	
+	            <!-- 오른쪽: 세트 정보와 채널 정보 -->
+	            <div class="right-layout">
+	                <div class="set-info" id="modalItemSet"></div> <!-- 세트 정보 -->
+	                <div class="channel-info" id="modalItemChannel"></div> <!-- 채널 정보 -->
+	            </div>
+	        </div>
+	    </div>
+	</div>
+	
 	<!-- 로딩 오버레이 -->
 	<div id="loadingOverlay" class="loading-overlay hidden">
 	  <div class="spinner"></div>
@@ -182,6 +215,10 @@
 	  <p></p>
 	  <p style="display: inline;">"에러 발생시에만" 로딩 화면이 꺼지지 않는다면<br/><span id="loadingClose">로딩 화면 끄기</span>를 눌러주세요</p>
 	 
+	</div>
+	
+	<div class="modal-overlay" id="modalBackground" style="display:none;">
+	  
 	</div>
 	
 </body>
