--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <script type="text/javascript" src="./js/apiCode.js"></script>
 <script src="./js/erinTime.min.js?v2"></script>
 <script src="./js/colorCode.min.js?v2"></script>
-<script type="text/javascript" src="./js/jumoney.min.js?v20251026-1706"></script>
+<script type="text/javascript" src="./js/jumoney.min.js?v20251026-1756"></script>
 <link rel="stylesheet" href="./css/font.css">
-<link rel="stylesheet" href="./css/default.css?v20251026-1736">
+<link rel="stylesheet" href="./css/default.css?v20251026-1720">
 <link rel="stylesheet" href="./css/icon/iconStyle.css?v20251025-0145">
 <style>
 		#loading a {
@@ -109,6 +109,8 @@
 				<li>모달창은 우측 상단 X 버튼이나 모달창 밖의 화면을 눌러 끌 수 있습니다.</li>
 				<li>&nbsp;</li>
 				<li>모달 창을 열기전 캡쳐하고 싶은 세트 혹은 서버를 클릭 후 열어주세요</li>
+				<li>&nbsp;</li>
+				<li>채널링 버튼이 연달아 호출되는 버그가 수정되었습니다.</li>
 			</ul>
 			
 			<ul style=" background: #fcf3f3;">
