--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 			
 			<ul style="background: #fff8c7;font-size: 11pt;">				
 				<li>
-					<label class="new_nt">new</label><a href="https://x.com/jumeonidik3038" target="_blank">@jumeonidik303</a>님과 <a href="https://x.com/inventory_LT" target="_blank">@inventory_LT</a>의 도움으로
+					<a href="https://x.com/jumeonidik3038" target="_blank">@jumeonidik303</a>님과 <a href="https://x.com/inventory_LT" target="_blank">@inventory_LT</a>의 도움으로
 					색 코드를 표시할 수 있게 됐습니다!
 				</li>
 				<li>정확하지 않을 수 있으니 참고용으로 봐주세요</li>
@@ -114,6 +114,9 @@
 				<li>&nbsp;</li>
 				<li>모달 창에서 우측 상단에 리셋시간, 남은시간, 현재시간이 표시됩니다.</li>
 				<li>현재 시간의 경우 모달 창의 넓이가 좁을 경우 표시되지 않습니다.</li>
+				<li>&nbsp;</li>
+				<li><label class="new_nt">new</label>모달 창에서 미리보기 이미지에 존재 하지않는 아이템은 투명도가 생깁니다.</li>
+				<li>흑백처리가 사라졌던 부분도 다시 처리됩니다.</li>
 			</ul>
 							
 			<ul>				
