--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <script type="text/javascript" src="./js/decodeGivenColorQuery.min.js"></script>
 <!-- <script src="./js/colorCode.min.js?v2"></script> -->
 <script type="text/javascript" src="./js/jumoneySample.min.js"></script>
-<script type="text/javascript" src="./js/jumoney.min.js?v20251027"></script>
+<script type="text/javascript" src="./js/jumoney.min.js?v20251028"></script>
 <link rel="stylesheet" href="./css/font.css">
-<link rel="stylesheet" href="./css/default.css?v20251027-3">
-<link rel="stylesheet" href="./css/icon/iconStyle.css?v20251027">
+<link rel="stylesheet" href="./css/default.css?v20251028">
+<link rel="stylesheet" href="./css/icon/iconStyle.css?v20251028">
 <style>
 		#loading a {
 			text-decoration: none;
@@ -91,32 +91,33 @@
 			<ul>
 				<li>얼레벌레 공지입니다. 보기 좋게 만드는 건 기능구현 후에..</li>
 			</ul>
-			
+			<br/>
 			<ul style="background: #fff8c7;font-size: 11pt;">				
 				<li>
-					<a href="https://x.com/jumeonidik3038" target="_blank">@jumeonidik303</a>님과 <a href="https://x.com/inventory_LT" target="_blank">@inventory_LT</a>의 도움으로
+					<label class="new_nt">new</label><a href="https://x.com/jumeonidik3038" target="_blank">주머니디코@jumeonidik303</a>님과 <a href="https://x.com/inventory_LT" target="_blank">인꾸해요@inventory_LT</a>님의 도움으로
 					색 코드를 표시할 수 있게 됐습니다!
 				</li>
-				<li>정확하지 않을 수 있으니 참고용으로 봐주세요</li>
-				<li>색 코드중 ? 표시가 있는 색은 분석이 덜 된 코드입니다.</li>
-				<li>이미지 주소값과 기미 후 스티커로 만들어서 나온 컬러 코드의 경우</li>
-				<li><a href="https://x.com/jumeonidik3038" target="_blank">@jumeonidik303</a>, <a href="https://x.com/inventory_LT" target="_blank">@inventory_LT</a> 여기로 전달해주세요!</li>
+				<li>색상코드 계산법이 <a href="https://x.com/jumeonidik3038" target="_blank">주머니디코@jumeonidik303</a>이 제공해주신 파일 수정본으로 대체됩니다.</li>
 			</ul>
 			
+			
 			<ul style=" background: #fcf3f3;">
-				<li><label class="new_nt">new</label>2024-10-27 19:42</li>								
-				<li>미리보기 이미지가 api 호출이 아닌 자체 이미지로 변경됩니다.</li>
+				<li><label class="new_nt">new</label>2024-10-28 22:29</li>								
+				<li>닫힘 이미지도 제작된 이미지가 표시됩니다.</li>
 				<li>이미지는 약간의 오차가 있을 수 있습니다.</li>
 				<li>&nbsp;</li>
-				<li>색상코드 계산법이 <a href="https://x.com/jumeonidik3038" target="_blank">@jumeonidik303</a>이 제공해주신 파일 수정본으로 대체됩니다.</li>
+				<li>이미지 제작에 도움 및 파일 제공 해주신 <a href="https://x.com/darkchocored" target="_blank">주머니보고다님@darkchocored</a>님 감사합니다.</li>
+			</ul>
+				
+			<ul>
+				<li>2024-10-27 19:42</li>								
+				<li>미리보기 이미지가 api 호출이 아닌 자체 이미지로 변경됩니다.</li>
+				<li>이미지는 약간의 오차가 있을 수 있습니다.</li>
 				<li>&nbsp;</li>
 				<li>모달 창에서 각 아이템 이름 왼쪽에 C팟 컬러에 해당하는 색이 표시됩니다.</li>
 				<li>&nbsp;</li>
 				<li>모달 창에서 우측 상단에 리셋시간, 남은시간, 현재시간이 표시됩니다.</li>
 				<li>현재 시간의 경우 모달 창의 넓이가 좁을 경우 표시되지 않습니다.</li>
-				<li>&nbsp;</li>
-				<li><label class="new_nt">new</label>모달 창에서 미리보기 이미지에 존재 하지않는 아이템은 투명도가 생깁니다.</li>
-				<li>흑백처리가 사라졌던 부분도 다시 처리됩니다.</li>
 			</ul>
 							
 			<ul>				
