--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <script src="./js/erinTime.min.js?v2"></script>
 <script type="text/javascript" src="./js/decodeGivenColorQuery.min.js"></script>
 <!-- <script src="./js/colorCode.min.js?v2"></script> -->
-<script type="text/javascript" src="./js/jumoneySample.min.js"></script>
-<script type="text/javascript" src="./js/jumoney.min.js?v20251028"></script>
+<script type="text/javascript" src="./js/jumoneySample.min.js?v20241028"></script>
+<script type="text/javascript" src="./js/jumoney.min.js?v20241028-1"></script>
 <link rel="stylesheet" href="./css/font.css">
-<link rel="stylesheet" href="./css/default.css?v20251028">
-<link rel="stylesheet" href="./css/icon/iconStyle.css?v20251028">
+<link rel="stylesheet" href="./css/default.css?v20241028">
+<link rel="stylesheet" href="./css/icon/iconStyle.css?v20241028">
 <style>
 		#loading a {
 			text-decoration: none;
