--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script type="text/javascript" src="./js/jumoneySample.min.js?v20241028-1"></script>
 <script type="text/javascript" src="./js/jumoney.min.js?v20241028-1"></script>
 <link rel="stylesheet" href="./css/font.css">
-<link rel="stylesheet" href="./css/default.css?v20241028">
+<link rel="stylesheet" href="./css/default.css?v20241028-2">
 <link rel="stylesheet" href="./css/icon/iconStyle.css?v20241028">
 <style>
 		#loading a {
