--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <script type="text/javascript" src="./js/decodeGivenColorQuery.min.js"></script>
 <!-- <script src="./js/colorCode.min.js?v2"></script> -->
 <script type="text/javascript" src="./js/jumoneySample.min.js?v20241028-1"></script>
-<script type="text/javascript" src="./js/jumoney.min.js?v20241028-1"></script>
+<script type="text/javascript" src="./js/jumoney.min.js?v20241028-2"></script>
 <link rel="stylesheet" href="./css/font.css">
-<link rel="stylesheet" href="./css/default.css?v20241028-5">
+<link rel="stylesheet" href="./css/default.css?v20241028-6">
 <link rel="stylesheet" href="./css/icon/iconStyle.css?v20241028">
 <style>
 		#loading a {
@@ -107,6 +107,8 @@
 				<li>이미지는 약간의 오차가 있을 수 있습니다.</li>
 				<li>&nbsp;</li>
 				<li>이미지 제작에 도움 및 파일 제공 해주신 <a href="https://x.com/darkchocored" target="_blank">주머니보고다님@darkchocored</a>님 감사합니다.</li>
+				<li>&nbsp;</li>
+				<li>업데이트 후 발견된 몇가지 버그가 수정되었습니다.</li>
 			</ul>
 				
 			<ul>
