--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <script type="text/javascript" src="./js/apiCode.js"></script>
 <script src="./js/erinTime.min.js?v2"></script>
 <script type="text/javascript" src="./js/decodeGivenColorQuery.min.js"></script>
-<!-- <script src="./js/colorCode.min.js?v2"></script> -->
-<script type="text/javascript" src="./js/jumoneySample.min.js?v20241028-1"></script>
-<script type="text/javascript" src="./js/jumoney.min.js?v20241028-2"></script>
+<script type="text/javascript" src="./js/jumoneySample.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/dom-to-image-more@2.8.0/dist/dom-to-image-more.min.js"></script>
+<script type="text/javascript" src="./js/jumoney.min.js?v20241029"></script>
 <link rel="stylesheet" href="./css/font.css">
-<link rel="stylesheet" href="./css/default.css?v20241028-7">
-<link rel="stylesheet" href="./css/icon/iconStyle.css?v20241028">
+<link rel="stylesheet" href="./css/default.css?v20241029">
+<link rel="stylesheet" href="./css/icon/iconStyle.css?v20241029">
 <style>
 		#loading a {
 			text-decoration: none;
@@ -94,7 +94,7 @@
 			<br/>
 			<ul style="background: #fff8c7;font-size: 11pt;">				
 				<li>
-					<label class="new_nt">new</label><a href="https://x.com/jumeonidik3038" target="_blank">주머니디코@jumeonidik303</a>님과 <a href="https://x.com/inventory_LT" target="_blank">인꾸해요@inventory_LT</a>님의 도움으로
+					<a href="https://x.com/jumeonidik3038" target="_blank">주머니디코@jumeonidik303</a>님과 <a href="https://x.com/inventory_LT" target="_blank">인꾸해요@inventory_LT</a>님의 도움으로
 					색 코드를 표시할 수 있게 됐습니다!
 				</li>
 				<li>색상코드 계산법이 <a href="https://x.com/jumeonidik3038" target="_blank">주머니디코@jumeonidik303</a>이 제공해주신 파일 수정본으로 대체됩니다.</li>
@@ -102,13 +102,16 @@
 			
 			
 			<ul style=" background: #fcf3f3;">
+				<li><label class="new_nt">new</label>2024-10-29 02:00</li>
+				<li>모달창 좌측 상단에 캡쳐 버튼이 생겼습니다.</li>
+				<li>&nbsp;</li>	
 				<li><label class="new_nt">new</label>2024-10-28 22:29</li>								
 				<li>닫힘 이미지도 제작된 이미지가 표시됩니다.</li>
 				<li>이미지는 약간의 오차가 있을 수 있습니다.</li>
 				<li>&nbsp;</li>
 				<li>이미지 제작에 도움 및 파일 제공 해주신 <a href="https://x.com/darkchocored" target="_blank">주머니보고다님@darkchocored</a>님 감사합니다.</li>
 				<li>&nbsp;</li>
-				<li>업데이트 후 발견된 몇가지 버그가 수정되었습니다.</li>
+				<li>업데이트 후 있던 버그 몇가지 수정</li>
 			</ul>
 				
 			<ul>
@@ -166,8 +169,10 @@
 	<!-- 모달 -->
 	<div id="itemModal" class="modal-overlay" style="display: none;">
 	    <div class="modal-content">
-	        <span id="closeModal" class="close-button">×</span>
-			
+	    	<div id="modal-btns">
+	        	<span id="captureBtn" class="icon-image"></span>
+		        <span id="closeModal" class="close-button">×</span>
+			</div>
 	        <div class="modal-body">
 	            <!-- 왼쪽: 이미지와 색상 정보 -->
 	            <div class="left-layout">	      
