--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script type="text/javascript" src="./js/decodeGivenColorQuery.min.js"></script>
 <script type="text/javascript" src="./js/jumoneySample.min.js?241030"></script>
 <script src="https://cdn.jsdelivr.net/npm/dom-to-image-more@2.8.0/dist/dom-to-image-more.min.js"></script>
-<script type="text/javascript" src="./js/jumoney.min.js?v241030-3"></script>
+<script type="text/javascript" src="./js/jumoney.min.js?v241030-5"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.4/dist/sweetalert2.all.min.js"></script>
 <link rel="stylesheet" href="./css/font.css">
 <link rel="stylesheet" href="./css/default.css?v241030-3">
@@ -111,6 +111,8 @@
 			<ul style=" background: #fcf3f3;">
 				<li><label class="new_nt">new</label>2024-10-30 22:10</li>
 				<li>아이템 이미지 부분 더블클릭시 채널링 기능이 생겼습니다.</li>
+				<li>&nbsp;</li>
+				<li>모바일 더블탭 기능을 추가하였습니다.</li>
 				<li>&nbsp;</li>
 				<li>모달창에서도 세트, 서버 선택 토글이 가능해집니다.</li>
 				<li>&nbsp;</li>
