--- a/index.html
+++ b/index.html
@@ -118,17 +118,9 @@
 				<li>&nbsp;</li>
 				<li>캡쳐시 API KEY 노출을 방지 합니다.</li>
 			</ul>
-			
-			<ul>
-				<li>모달창 좌측 상단에 저장 버튼이 생겼습니다.</li>
-				<li>모달창 좌측 상단에 캡쳐 버튼이 생겼습니다.</li>				
-				<li>닫힘 이미지도 제작된 이미지가 표시됩니다.</li>
-				<li>이미지는 약간의 오차가 있을 수 있습니다.</li>
-			</ul>
-				
-			<ul>
-				<li>2024-10-27 19:42</li>								
-				<li>미리보기 이미지가 api 호출이 아닌 자체 이미지로 변경됩니다.</li>
+						
+			<ul>							
+				<li>자체 이미지로 변경됩니다.</li>
 				<li>이미지는 약간의 오차가 있을 수 있습니다.</li>
 				<li>&nbsp;</li>
 				<li>모달 창에서 각 아이템 이름 왼쪽에 C팟 컬러에 해당하는 색이 표시됩니다.</li>
@@ -145,26 +137,14 @@
 			</ul>
 			
 			<ul>
-				<li>전체 서버 채널링 및 채널링에서 세트 정보 표기를 눌러 해당 주머니 채널만 볼 수 있습니다!</li>
-				<li>어디까지 로딩했는지 확인 가능합니다.</li>
-				<li>로딩된 데이터는 페이지를 새로고침 하거나, 리셋시간이 되지 않은 경우 캐시에 저장 되어있으니</li>
-				<li>호출 제한 코드가 뜬 후 다시 채널링을 누를 경우 못 받은 데이터만 호출해서 가져옵니다.</li>				
-			</ul>
-			
-			<br/>
-			<ul>
 				<li>주머니 이름 클릭시 이미지 위에 지역 이름이 표시됩니다!</li>
 				<li>채널링, 특히 전 서버 채널링은 어쩔 수 없이 api 호출 횟수가 많습니다.</li>
 				<li>서비스 api키 발급에서 사이트 검증을 안하는 것 같으니 참고하세요!</li>
-			</ul>
-			
-			<ul>
-				<li>넥슨 API 정보를 사용한 사이트입니다.</li>
-			</ul>
+			</ul>			
 			
 			<ul>
 				<li>기능 추가 예정 - 여기 중에 뭐가 먼저 나올지는 저도 모르겠어요</li>
-				<li>주머니 코드 입력시 원하는 지향 주머니 이미지 제작</li>		
+				<li>주머니 코드 입력시 원하는 지향 주머니 이미지 제작</li>
 				<li>만들어진 이미지를 픽셀이 깨지지 않고 축소 확대 기능 추가 예정</li>				
 				<li>색 필터링 검색 기능 추가 예정</li>
 			</ul>
