--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./css/font.css">
-<link rel="stylesheet" href="./css/default.css?v241031">
+<link rel="stylesheet" href="./css/default.css?v241031-1">
 <link rel="stylesheet" href="./css/icon/iconStyle.css?v241030-2">
 <link rel="stylesheet" href="./js/sweetalert2/sweetalert2.css"></link>
 <style>
