--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="./js/apiCode.js"></script>
 <script src="./js/erinTime.min.js?v2"></script>
 <script type="text/javascript" src="./js/decodeGivenColorQuery.min.js"></script>
-<script type="text/javascript" src="./js/jumoneySample.min.js?241030"></script>
+<script type="text/javascript" src="./js/jumoneySample.min.js?241031"></script>
 <script src="https://cdn.jsdelivr.net/npm/dom-to-image-more@2.8.0/dist/dom-to-image-more.min.js"></script>
 <script type="text/javascript" src="./js/jumoney.min.js?v241030-7"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.4/dist/sweetalert2.all.min.js"></script>
@@ -109,6 +109,11 @@
 				</li>
 				<li>색상코드 계산법이 <a href="https://x.com/jumeonidik3038" target="_blank">주머니디코@jumeonidik303</a>이 제공해주신 파일 수정본으로 대체됩니다.</li>
 				<li>이미지 제작에 도움 및 파일 제공 해주신 <a href="https://x.com/darkchocored" target="_blank">주머니보고다님@darkchocored</a>님 감사합니다.</li>
+			</ul>
+
+			<ul style=" background: #fcf3f3;">
+				<li><label class="new_nt">new</label>2024-10-310 22:02</li>
+				<li>저가형 로마자를 제외한 일반, 고급, 최고급 로마자 계산법이 수정되었습니다.</li>
 			</ul>
 			
 			<ul style=" background: #fcf3f3;">
