--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 <script type="text/javascript" src="./js/apiCode.js"></script>
 <script src="./js/erinTime.min.js?v2"></script>
 <script type="text/javascript" src="./js/decodeGivenColorQuery.min.js"></script>
-<script type="text/javascript" src="./js/jumoneySample.js?241030"></script>
+<script type="text/javascript" src="./js/jumoneySample.min.js?241101"></script>
 <script src="https://cdn.jsdelivr.net/npm/dom-to-image-more@2.8.0/dist/dom-to-image-more.min.js"></script>
-<script type="text/javascript" src="./js/jumoney.min.js?v241030-2"></script>
+<script type="text/javascript" src="./js/jumoney.min.js?v241101"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.4/dist/sweetalert2.all.min.js"></script>
 <link rel="stylesheet" href="./js/izitoast/izitoast.css"></link>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js"></script> -->
 <script src="./js/izitoast/izitoast.js"></script>
 <link rel="stylesheet" href="./css/font.css">
-<link rel="stylesheet" href="./css/default.css?v241030-2">
-<link rel="stylesheet" href="./css/icon/iconStyle.css?v241030-2">
+<link rel="stylesheet" href="./css/default.css?v241101">
+<link rel="stylesheet" href="./css/icon/iconStyle.css?v241101">
 <link rel="stylesheet" href="./js/sweetalert2/sweetalert2.css"></link>
 <style>
 		#loading a {
