--- a/index.html
+++ b/index.html
@@ -131,9 +131,12 @@
 				<li>4. 채널링 표시에서 제알 앞 채널이 강조 표시 되며, 다른 채널은 좀 더 작고 연하게 표시 됩니다.</li>
 				<li>&nbsp;&nbsp;&nbsp;&nbsp;해당 기능의 경우 기존 처럼 보기 위한 토글 기능을 추가 예정입니다.</li>
 				<li>&nbsp;</li>
-				<li>5. 셀레 박스에서 선택한 채널이 로컬 데이터에 저장되어 유지됩니다.</li>
+				<li>5. 셀렉 박스에서 선택한 채널이 로컬 데이터에 저장되어 유지됩니다.</li>
 				<li>&nbsp;&nbsp;&nbsp;&nbsp;이전 및 다음 채널 버튼으로 이동한 채널은 저장되지 않습니다.</li>
 				<li>&nbsp;&nbsp;&nbsp;&nbsp;서버를 변경할 경우 1채로 변경됩니다. 채널 선택에서 다시 저장할 수 있습니다.</li>
+				<li>&nbsp;</li>
+				<li>6. 모달창에서 복사 성공시 뜨던 귀찮은 경고창이 대체됩니다!</li>
+				<li>&nbsp;</li>
 			</ul>
 			
 			<ul style=" background: #fcf3f3;">
