--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.4/dist/sweetalert2.all.min.js"></script>
 <link rel="stylesheet" href="./js/izitoast/izitoast.css"></link>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js"></script> -->
-<script src="./js/izitoast/izitoast.js"></script>
+<script type="text/javascript"  src="./js/izitoast/izitoast.js"></script>
 <link rel="stylesheet" href="./css/font.css?241101">
 <link rel="stylesheet" href="./css/default.css?v241101">
 <link rel="stylesheet" href="./css/icon/iconStyle.css?v241101">
