--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <script src="https://cdn.jsdelivr.net/npm/dom-to-image-more@2.8.0/dist/dom-to-image-more.min.js"></script>
 <script type="text/javascript" src="./js/jumoney.min.js?v241101"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.4/dist/sweetalert2.all.min.js"></script>
-<link rel="stylesheet" href="./js/izitoast/izitoast.css"></link>
+<link rel="stylesheet" href="./js/izitoast/iziToast.css"></link>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js"></script> -->
-<script type="text/javascript"  src="./js/izitoast/izitoast.js"></script>
+<script type="text/javascript"  src="./js/izitoast/iziToast.js"></script>
 <link rel="stylesheet" href="./css/font.css?241101">
 <link rel="stylesheet" href="./css/default.css?v241101">
 <link rel="stylesheet" href="./css/icon/iconStyle.css?v241101">
