--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
 		                <!-- <div class="set-info" id="modalItemSet"></div>  --><!-- 세트 정보 -->
 		                <div class="channel-info" id="modalItemChannel"></div> <!-- 채널 정보 -->
 	                </div>
+			<span id="curDate"></span>
 	            </div>
 	        </div>
 	    </div>
