--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js"></script> -->
 <script type="text/javascript"  src="./js/izitoast/iziToast.js"></script>
 <link rel="stylesheet" href="./css/font.css?241101">
-<link rel="stylesheet" href="./css/default.css?v241102">
+<link rel="stylesheet" href="./css/default.css?v241102-1">
 <link rel="stylesheet" href="./css/icon/iconStyle.css?v241101">
 <link rel="stylesheet" href="./js/sweetalert2/sweetalert2.css"></link>
 <style>
@@ -247,7 +247,7 @@
 	</div>
 	<footer>
 		<p>Data based on NEXON Open API</p>
-		<p>V241102-0319</p>
+		<p>V241102-0319-1</p>
 		<span>made by @Shuu__deal</span>
 	</footer>
 </body>
