--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 <script type="text/javascript" src="./js/apiCode.js"></script>
 <script src="./js/erinTime.min.js?v2"></script>
 <script type="text/javascript" src="./js/decodeGivenColorQuery.min.js"></script>
-<script type="text/javascript" src="./js/jumoneySample.min.js?241103-1"></script>
+<script type="text/javascript" src="./js/jumoneySample.min.js?241103"></script>
 <script src="https://cdn.jsdelivr.net/npm/dom-to-image-more@2.8.0/dist/dom-to-image-more.min.js"></script>
-<script type="text/javascript" src="./js/jumoney.min.js?v241104-1"></script>
+<script type="text/javascript" src="./js/jumoney.min.js?v241104"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.4/dist/sweetalert2.all.min.js"></script>
 <link rel="stylesheet" href="./js/izitoast/iziToast.css"></link>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js"></script> -->
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 
 <script type="text/javascript"  src="./js/izitoast/iziToast.js"></script>
-<link rel="stylesheet" href="./css/font.css?241101">
-<link rel="stylesheet" href="./css/default.css?v241104-1">
+<link rel="stylesheet" href="./css/font.css?241104">
+<link rel="stylesheet" href="./css/default.css?v241104">
 <link rel="stylesheet" href="./css/icon/iconStyle.css?v241101">
 <link rel="stylesheet" href="./js/sweetalert2/sweetalert2.css"></link>
 <script>
@@ -122,6 +122,12 @@
 			</ul>		
 	
 			<br/>
+			
+			<ul style=" background: #fcf3f3;">
+				<li><label class="new_nt">new</label>2024-11-04 18:30</li>
+				<li>&nbsp;</li>
+				<li>모달창에서 세트별 서버 채널 표시가 추가됩니다.</li>
+			</ul>
 			
 			<ul style=" background: #fcf3f3;">
 				<li><label class="new_nt">new</label>2024-11-03 20:30</li>
@@ -262,7 +268,7 @@
 	</div>
 	<footer>
 		<p>Data based on NEXON Open API</p>
-		<p>V241104-0310</p>
+		<p>V241104-1830</p>
 		<span>made by @Shuu__deal</span>
 	</footer>
 </body>
