--- a/jumoney-beta.html
+++ b/jumoney-beta.html
@@ -38,7 +38,7 @@
 <script	src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
 <script type="text/javascript" src="./js/cache.js?v241101"></script>
 <script type="text/javascript" src="./js/a_001.min.js?241104"></script>
-<script type="text/javascript" src="./js/a_002.min.js?241107"></script>
+<script type="text/javascript" src="./js/a_002.min.js?241107-2"></script>
 <script	src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 <script	src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js"></script>
 <link rel="stylesheet" href="./css/font.css?241104">
