--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 			<br/>
 			
 			<ul style=" background: #fcf3f3;">
-				<li><label class="new_nt">new</label>2024-11-08  01:10</li>
+				<li><label class="new_nt">new</label>2024-11-12  02:10</li>
 				<li>&nbsp;</li>
 				<li>1. 서버 통합으로 완성되는 유사방직 세트가 표시됩니다.</li>
 				<li>&nbsp;</li>
@@ -153,7 +153,7 @@
 				<li>- 해당 기능은 이미지 툴을 다루기 어려운 분들을 위한 기능입니다.</li>
 				<li>- 이미지 툴 다루는데 어려움이 없으신 분들은 <a href="https://x.com/Elatha_Marry_Me/status/1853811385647730803" target="_blank">WF 쭈냠냠이</a>님 틀을 사용해보세요!</li>
 				<li>&nbsp;</li>
-				<li>2. 캡쳐 또는 이미지 저장시 색 코드가 불바꿈 되던 현상이 수정되었습니다.</li>
+				<li>2. 캡쳐 또는 이미지 저장시 색 코드가 줄바꿈 되던 현상이 수정되었습니다.</li>
 				<li>3. 전서버 채널링 / 서버 채널링이 구분되어 표시됩니다. (채널링 정보 좌측 서버 표시)</li>
 			</ul>
 			
