and/or 유지 버그 수정
and/or 유지 버그 수정

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <script type="text/javascript" src="./js/apiCode.js"></script>
 <script src="./js/erinTime.min.js?v2"></script>
 <script type="text/javascript" src="./js/decodeGivenColorQuery.min.js"></script>
-<script type="text/javascript" src="./js/a_001.min.js?241103"></script>
+<script type="text/javascript" src="./js/a_001.min.js?241209"></script>
 <script src="https://cdn.jsdelivr.net/npm/dom-to-image-more@2.8.0/dist/dom-to-image-more.min.js"></script>
 <script	src="https://cdn.jsdelivr.net/npm/dom-to-image-font-patch@latest/dist/dom-to-image-font-patch.min.js"></script>
-<script type="text/javascript" src="./js/jumoney.min.js?v241209-02"></script>
+<script type="text/javascript" src="./js/jumoney.min.js?v241209-03"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.4/dist/sweetalert2.all.min.js"></script>
 <link rel="stylesheet" href="./js/izitoast/iziToast.css"></link>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js"></script> -->
@@ -19,7 +19,7 @@
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 <script type="text/javascript"  src="./js/izitoast/iziToast.js"></script>
 <link rel="stylesheet" href="./css/font.css?241105">
-<link rel="stylesheet" href="./css/default.css?v241209-02">
+<link rel="stylesheet" href="./css/default.css?v241209">
 <link rel="stylesheet" href="./css/icon/iconStyle.css?v241101">
 <link rel="stylesheet" href="./js/sweetalert2/sweetalert2.css"></link>
 <script>
@@ -333,6 +333,9 @@ display:none;
 				<li>&nbsp;</li>
 				<li>- '옵션 접기/펼치기' 버튼을 통해 필터링 옵션을 설정할 수 있습니다.</li>
 				<li>- 자세한 사용법은 추후 공지 예정입니다.</li>
+				<li>&nbsp;</li>
+				<li>- 오차 0 입력 안되는 버그 수정.</li>
+				<li>- AND/OR 새로고침 시 유지 안되는 버그 수정.</li>
 			</ul>
 			<br/>			
 			
@@ -440,7 +443,7 @@ display:none;
 	
 	<footer>
 		<p>Data based on NEXON Open API</p>
-		<p style="font-size: 13px;">V241209-filter</p>
+		<p style="font-size: 13px;">V241209-filter-02</p>
 		<span>울프 주머니@Shuu__deal</span>
 	</footer>
 </body>
