--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ display:none;
 	
 	<footer>
 		<p>Data based on NEXON Open API</p>
-		<p style="font-size: 13px;">V241210-00/p>
+		<p style="font-size: 13px;">V241210-00</p>
 		<span>울프 주머니@Shuu__deal</span>
 	</footer>
 </body>
