--- a/index.html
+++ b/index.html
@@ -323,6 +323,10 @@ display:none;
 	</div>
 	<div id="main">
 		<div id="loading">
+			<ul style="text-align: center; font-size: 15pt;">
+				<li>2025년 한 해는 좋은 일이 가득한 한 해 되시길 바랍니다</li>
+				<li>다들 새해 복 많이 받으세요</li>
+			</ul>
 			<ul>
 				<li>얼레벌레 공지입니다. 보기 좋게 만드는 건 기능구현 후에..</li>
 			</ul>
