--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ display:none;
 	
 	<footer>
 		<p>Data based on NEXON Open API</p>
-		<p style="font-size: 13px;">V250301-test</p>
+		<p style="font-size: 13px;">V250301-2-test</p>
 		<span>울프 주머니@Shuu__deal</span>
 	</footer>
 </body>
