--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script type="text/javascript" src="./js/a_001.min.js?241209"></script>
 <script src="https://cdn.jsdelivr.net/npm/dom-to-image-more@2.8.0/dist/dom-to-image-more.min.js"></script>
 <script	src="https://cdn.jsdelivr.net/npm/dom-to-image-font-patch@latest/dist/dom-to-image-font-patch.min.js"></script>
-<script type="text/javascript" src="./js/jumoney.min.js?v2450304"></script>
+<script type="text/javascript" src="./js/jumoney.min.js?v250312"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.4/dist/sweetalert2.all.min.js"></script>
 <link rel="stylesheet" href="./js/izitoast/iziToast.css"></link>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js"></script> -->
@@ -19,7 +19,7 @@
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 <script type="text/javascript"  src="./js/izitoast/iziToast.js"></script>
 <link rel="stylesheet" href="./css/font.css?241105">
-<link rel="stylesheet" href="./css/default.css?v241209-03">
+<link rel="stylesheet" href="./css/default.css?v250312">
 <link rel="stylesheet" href="./css/icon/iconStyle.css?v241101">
 <link rel="stylesheet" href="./js/sweetalert2/sweetalert2.css"></link>
 <script>
@@ -421,7 +421,7 @@ display:none;
 					</div>
 					<div id="right-content">
 		                <!-- <div class="set-info" id="modalItemSet"></div>  --><!-- 세트 정보 -->
-		                <div class="channel-info" id="modalItemChannel"></div> <!-- 채널 정보 -->
+		                <!-- <div class="channel-info" id="modalItemChannel"></div>--> <!-- 채널 정보 -->
 	                </div>
 	                <span id="curDate"></span>
 	            </div>
@@ -453,7 +453,7 @@ display:none;
 	
 	<footer>
 		<p>Data based on NEXON Open API</p>
-		<p style="font-size: 13px;">V250303-Dells</p>
+		<p style="font-size: 13px;">V250312</p>
 		<span>울프 주머니@Shuu__deal</span>
 	</footer>
 </body>
