--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="icon" href="./image/favicon.ico" type="image/x-icon">
 <title>주머니 순회</title>
 <script type="text/javascript" src="./js/cache.js?v241101"></script>
-<script type="text/javascript" src="./js/apiCode.js"></script>
+<script type="text/javascript" src="./js/apiCode.js?b250313"></script>
 <script src="./js/erinTime.min.js?v2"></script>
 <script type="text/javascript" src="./js/decodeGivenColorQuery.min.js"></script>
 <script type="text/javascript" src="./js/a_001.min.js?241209"></script>
