--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@ display:none;
 				<li>&nbsp;</li>
 				<li>- 에린 시간이 API에서 받은 리셋 시간과 동기화 작업이 진행됩니다.</li>
 				<li>- 동기화는 에린시간 하루에 한번씩 진행되며 주머니 리스트를 호출 한 경우만 해당됩니다.</li>
+				<li>- 이 작업으로 현실 시간으로 초기화 시간이 되면 주머니 채널링이 불가능했던 점이 에린시간 기준으로 변경됩니다.</li>
 				<li>&nbsp;</li>
 				<li>- 간혹 API 호출 응답은 성공적으로 받았으나 주머니 리스트가 존재하지 않아 빈 화면으로 표시되던 현상이 있었습니다.</li>
 				<li>- 해당 현상도 사용자가 알아볼 수 있도록 경고창이 나오도록 수정되었습니다.</li>
