--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ display:none;
 				<li>- 델/델렌은 간단한 추가라서 현재 형식에 맞지 않습니다... (귀찮았습니다..) 추후 수정 예정</li>
 				<li>&nbsp;</li>
 				<li>- 기존 필터링 내용에서 이름이 4글자 제한이 받지 않는 버그가 있습니다.</li>
-				<li>- 해당 기능은 필터링 후 리스트에서 이름이 이미지를 가리지 않기 위한 조치(필터링 여러개가 적합할 때)로 기능에는 이상이 없어 일단 그래도 둘 예정입니다.</li>
+				<li>- 해당 기능은 필터링 후 리스트에서 이름이 이미지를 가리지 않기 위한 조치(필터링 여러개가 적합할 때)로 기능에는 이상이 없어 일단 그대로 둘 예정입니다.</li>
 			</ul>
 			<br/>			
 			
